--- a/Blockchain-32Hr-FCC/html-fund-me-fcc/index.html
+++ b/Blockchain-32Hr-FCC/html-fund-me-fcc/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fund Me App</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello</h1>
     <script>
-        
+      async function connect() {
+        if (typeof window.ethereum !== "undefined") {
+          await window.ethereum.request({ method: "eth_requestAccounts" });
+          document.getElementById("connectButton").innerHTML = "Connected!";
+        } else {
+          document.getElementById("connectButton").innerHTML = "Please install metamask!";
+        }
+      }
     </script>
-</body>
+    <button id="connectButton" onclick="connect()">Connect</button>
+  </body>
 </html>
